--- a/styles/styles.css
+++ b/styles/styles.css
@@ -103,6 +103,15 @@ h2 {
   text-align: center;
 }
 
+.textContent {
+  background-color: #efefef;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  text-align: center;
+}
+
 .thumbnail {
   max-width: 100px;
   max-height: 100px;
